Fix: Footer & Header

--- a/Final_Celerates/daftar.html
+++ b/Final_Celerates/daftar.html
@@ -25,7 +25,7 @@
         <input placeholder="Email/nomor ponsel" type="email" />
         <input placeholder="Masukkan kata sandi baru" type="password" />
         <input placeholder="Masukkan kata sandi" type="password" />
-        <a href="user.html" class="buttonzzz">Masuk</a>
+        <a href="user.html" class="buttonzzz">Daftar</a>
 
         <div class="divider">
             atau daftar dengan
