--- a/Final_Celerates/index.html
+++ b/Final_Celerates/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">CENTRAL JAVA</div>
+        <div class="logo">CENTRAL <br> JAVA</div>
         <nav class="nav">
             <a href="#">Beranda</a>
             <div class="dropdown">
-                <button class="dropbtn">Kategori v</button>
+                <button class="dropbtn">Kategori <i class="fas fa-chevron-down"></i></button>
                 <div class="dropdown-content">
                     <a href="pakaian.html">Pakaian</a>
                     <a href="makanan.html">Makanan</a>
@@ -23,8 +23,8 @@
                 </div>
             </div>
             <div class="search-bar">
+                <button type="button"><i class="fas fa-search"></i></button>
                 <input type="text" placeholder="Cari Produk...">
-                <button class="search-button">Cari</button>
             </div>
             <a href="Login.html" class="auth-button">Masuk</a>
             <a href="daftar.html" class="auth-button">Daftar</a>
