--- a/Final_Celerates/user.html
+++ b/Final_Celerates/user.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">CENTRAL JAVA</div>
+        <div class="logo">CENTRAL <br> JAVA</div>
         <nav class="nav">
             <a href="#">Beranda</a>
             <div class="dropdown">
-                <button class="dropbtn">Kategori</button>
+                <button class="dropbtn">Kategori <i class="fas fa-chevron-down"></i></button>
                 <div class="dropdown-content">
                     <a href="pakaian.html">Pakaian</a>
                     <a href="makanan.html">Makanan</a>
@@ -23,14 +23,12 @@
                 </div>
             </div>
             <div class="search-bar">
+                <button type="button"><i class="fas fa-search"></i></button>
                 <input type="text" placeholder="Cari Produk...">
-                <button class="search-button">Cari</button>
             </div>
-            <!-- Add Cart Icon -->
             <a href="keranjang.html" class="keranjang00">
                 <i class="fas fa-shopping-cart"></i>
             </a>
-            <!-- Add Profile Icon -->
             <a href="profil.html" class="profile-icon">
                 <i class="fas fa-user-circle"></i>
             </a>
