profil & Header Loyalitas

--- a/Final_Celerates/profil.html
+++ b/Final_Celerates/profil.html
@@ -32,42 +32,50 @@
         </nav>
     </header>
 
-  <div class="main">
-    <div class="profile-sidebar">
-      <div class="profile-pic"><span>J</span></div>
-      <div class="profile-menu">
-        <button>Akun</button>
-        <button>Daftar Transaksi</button>
-      </div>
-    </div>
-
-    <div class="profile-content">
-      <div class="tabs">
-        <button class="active">Profil</button>
-        <button>Daftar Alamat</button>
-        <button>Notifikasi</button>
-        <button>Keamanan</button>
-        <button>Tentang Akun</button>
-      </div>
-      <div class="profile-details">
-        <div class="details">
-          <p><span>Nama:</span> Jihan Aprilia</p>
-          <p><span>Email:</span> jihanl@gmail.com</p>
-          <p><span>No. Ponsel:</span> 085765789099</p>
+    <div class="account-header">
+        <div class="account-icon">
+            <i class="fa fa-user"></i> 
+            <span>Akun</span>
         </div>
-        <div class="profile-pic">
-          <img src="img/profilll.jpg" alt="Profile picture of Jihan Aprilia" width="150" height="150">
-        </div>
-      </div>
     </div>
-  </div>
+    
+    <div class="main">
+        <div class="profile-sidebar">
+            <div class="profile-box">
+                <div class="profile-icon-circle">J</div>
+                <div class="profile-name">Jihan Aprilia</div>
+            </div>
+            <button class="account-button active">Akun</button>
+            <button class="transaction-button">Daftar Transaksi</button>
+        </div>
+    
+        <div class="profile-content">
+            <div class="tabs">
+                <button class="tab active">Profil</button>
+                <button class="tab">Daftar Alamat</button>
+                <button class="tab">Notifikasi</button>
+                <button class="tab">Keamanan</button>
+                <button class="tab">Tentang Akun</button>
+            </div>
+            <h4 class="ubah-profil-title">Ubah Profil</h4>
+            <div class="profile-details">
+                <div class="details">
+                    <p><span>Nama</span> Jihan Aprilia <i class="fas fa-edit"></i></p>
+                    <p><span>Email</span> jihanl@gmail.com <i class="fas fa-edit"></i></p>
+                    <p><span>No. Ponsel</span> 085765789099 <i class="fas fa-edit"></i></p>
+                </div>
+                <div class="profile-pic">
+                    <img src="img/profilll.jpg" alt="Profile picture of Jihan Aprilia">
+                </div>
+            </div>
+        </div>
+    </div>
 
   <div class="banner">
-    <img src="img/Banner.png" alt="Banner image showcasing various products from Central Java" width="1200" height="500">
+    <img src="img/Banner.png" alt="Banner image showcasing various products from Central Java">
   </div>
 
-<!-- Footer Section -->
-<footer class="footer">
+  <footer class="footer">
     <div class="container">
         <div class="row">
             <div class="col-md-3 footer-logo">
@@ -111,6 +119,6 @@
             <p>&copy; Central Java</p>
         </div>
     </div>
-</footer>
+  </footer>
 </body>
 </html>
