--- a/Final_Celerates/user.html
+++ b/Final_Celerates/user.html
@@ -29,9 +29,13 @@
             <a href="keranjang.html" class="keranjang00">
                 <i class="fas fa-shopping-cart"></i>
             </a>
-            <a href="profil.html" class="profile-icon">
+            <a href="#" class="profile-icon">
                 <i class="fas fa-user-circle"></i>
             </a>
+            <div class="profil-dropdown-content">
+                <a href="profil.html">Pengaturan Akun</a>
+                <a href="Loyalitass.html">Loyalitas</a>
+            </div>
         </nav>
     </header>
 
@@ -458,7 +462,7 @@
     
     <!-- Footer Section -->
 <footer class="footer">
-    <div class="container">
+    <div class="containersss">
         <div class="row">
             <div class="col-md-3 footer-logo">
                 <h3>Central Java</h3>
@@ -502,6 +506,7 @@
         </div>
     </div>
 </footer>
+    <script src="dropdownprofile.js"></script>
     <script src="dropdown.js"></script>
     <script src="index.js"></script> 
 </body>
