--- a/Final_Celerates/user.html
+++ b/Final_Celerates/user.html
@@ -49,6 +49,11 @@
             <img src="img/newbg.png" alt="Borobudur and Traditional Attire">
         </div>
     </main>
+
+    <div class="banner">
+        <p>Oleh - Oleh Produk Khas Jawa Tengah</p>
+      </div>
+
     <section class="flash-sale">
         <h2>Flash Sale</h2>
         <p>Berakhir dalam</p>
