--- a/Final_Celerates/makanan.html
+++ b/Final_Celerates/makanan.html
@@ -217,5 +217,8 @@
             </div>
         </div>
     </footer>
+    <script src="dropdownprofile.js"></script>
+    <script src="dropdown.js"></script>
+    <script src="index.js"></script> 
 </body>
 </html>
