--- a/Final_Celerates/kerajinan.html
+++ b/Final_Celerates/kerajinan.html
@@ -216,6 +216,9 @@
             </div>
         </div>
     </footer>
+    <script src="dropdownprofile.js"></script>
+    <script src="dropdown.js"></script>
+    <script src="index.js"></script> 
 </body>
 </head>
 </html>
