--- a/Final_Celerates/kerajinan.html
+++ b/Final_Celerates/kerajinan.html
@@ -66,10 +66,13 @@
                     <img alt="Product Image 1" src="kategori kerajinan/KERAJINAN tempurung kelapa.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Peralatan Minum dari Tempurung Kelapa</h3>
                             <p class="price">Rp. 90.000</p>
-                        </div>
+                        </div>                        
                         <button class="add-to-cart"><i class="fas fa-shopping-cart"></i></button>
                     </div>
                 </div>
@@ -78,7 +81,10 @@
                     <img alt="Product Image 2" src="kategori kerajinan/Kerajinan Topeng souvenir.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                            <span class="stras">★★★★★</span>
+                            <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Gantungan kunci topeng Tradisional Sanggar Jaka Baru</h3>
                             <p class="price">Rp. 17.000</p>
                         </div>
@@ -90,7 +96,10 @@
                     <img alt="Product Image 3" src="kategori kerajinan/celengan.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Celengan kayu handmade</h3>
                             <p class="price">Rp. 70.000</p>
                         </div>
@@ -102,7 +111,10 @@
                     <img alt="Product Image 4" src="kategori kerajinan/hiasan rumah.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★☆☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★☆☆</span>
+                                <span class="rating-number">(3)</span>
+                            </p>
                             <h3>Kerajinan Tempurung Kelapa Untuk Hiasan Rumah</h3>
                             <p class="price">Rp. 85.000</p>
                         </div>
@@ -114,7 +126,10 @@
                     <img alt="Product Image 5" src="kategori kerajinan/wayang semar.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★☆☆</span>
+                                <span class="rating-number">(3)</span>
+                            </p>
                             <h3>Wayang Semar Buatan Tangan</h3>
                             <p class="price">Rp. 150.000</p>
                         </div>
@@ -126,7 +141,10 @@
                     <img alt="Product Image 6" src="kategori kerajinan/Rotan Gajah Tempat Permen.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Rotan Gajah Tempat Permen</h3>
                             <p class="price">Rp. 230.000</p>
                         </div>
@@ -138,7 +156,10 @@
                     <img alt="Product Image 7" src="kategori kerajinan/anting.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Anting Dari Tempurung Kelapa</h3>
                             <p class="price">Rp. 85.000</p>
                         </div>
@@ -150,7 +171,10 @@
                     <img alt="Product Image 8" src="kategori kerajinan/anyaman eceng gondok.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Keranjang Anyaman Eceng Gondok</h3>
                             <p class="price">Rp. 210.000</p>
                         </div>
@@ -162,7 +186,10 @@
                     <img alt="Product Image 9" src="kategori kerajinan/hiasan dinding.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Hiasan Dinding Ukiran Kayu Asli Buatan Tangan</h3>
                             <p class="price">Rp. 930.000</p>
                         </div>
@@ -217,9 +244,6 @@
             </div>
         </div>
     </footer>
-    <script src="dropdownprofile.js"></script>
-    <script src="dropdown.js"></script>
-    <script src="index.js"></script> 
 </body>
 </head>
 </html>
