--- a/Final_Celerates/pakaian.html
+++ b/Final_Celerates/pakaian.html
@@ -64,7 +64,10 @@
                     <img alt="Product Image 1" src="image project2/batik pria.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Kemeja Batik Solo</h3>
                             <p class="price">Rp. 250.000</p>
                         </div>
@@ -76,7 +79,10 @@
                     <img alt="Product Image 2" src="image project2/batik biru.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                            </p>
                             <h3>Kemeja Batik Biru</h3>
                             <p class="price">Rp. 280.000</p>
                         </div>
@@ -88,7 +94,10 @@
                     <img alt="Product Image 3" src="image project2/batik kebumen.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Kemeja Batik Kebumen</h3>
                             <p class="price">Rp. 275.000</p>
                         </div>
@@ -100,7 +109,10 @@
                     <img alt="Product Image 4" src="image project2/batik blazer oren.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★☆☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Blazer Batik Wanita</h3>
                             <p class="price">Rp. 280.000</p>
                         </div>
@@ -112,7 +124,10 @@
                     <img alt="Product Image 5" src="image project2/baju lurik.jpg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Baju Surjen/Lurik</h3>
                             <p class="price">Rp. 170.000</p>
                         </div>
@@ -124,7 +139,10 @@
                     <img alt="Product Image 6" src="image project2/kebaya jadul.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Satu Set Baju Kebaya Jadul</h3>
                             <p class="price">Rp. 400.000</p>
                         </div>
@@ -136,7 +154,10 @@
                     <img alt="Product Image 7" src="image project2/batikoriginal.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★☆☆</span>
+                                <span class="rating-number">(3)</span>
+                            </p>
                             <h3>Baju batik Wanita Original</h3>
                             <p class="price">Rp. 300.000</p>
                         </div>
@@ -148,7 +169,10 @@
                     <img alt="Product Image 8" src="image project2/blouse kekinian.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★☆☆</span>
+                                <span class="rating-number">(3)</span>
+                            </p>
                             <h3>Blouse Batik kekinian</h3>
                             <p class="price">Rp. 290.000</p>
                         </div>
@@ -160,7 +184,10 @@
                     <img alt="Product Image 9" src="image project2/Nonarara Batik.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★☆☆</span>
+                                <span class="rating-number">(3)</span>
+                            </p>
                             <h3>Nonarera Batik</h3>
                             <p class="price">Rp. 250.000</p>
                         </div>
@@ -215,8 +242,5 @@
             </div>
         </div>
     </footer>
-    <script src="dropdownprofile.js"></script>
-    <script src="dropdown.js"></script>
-    <script src="index.js"></script> 
 </body>
 </html>
