--- a/Final_Celerates/makanan.html
+++ b/Final_Celerates/makanan.html
@@ -67,7 +67,10 @@
                     <img alt="Product Image 1" src="kategori makanan/Gethuk.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Gethuk Khas Jawa Tengah (per pcs)</h3>
                             <p class="price">Rp. 3.000</p>
                         </div>
@@ -79,7 +82,10 @@
                     <img alt="Product Image 2" src="kategori makanan/Onde - Onde, Khas Jawa Tengah.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stras">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                                </p>
                             <h3>Onde onde Khas Jawa Tengah</h3>
                             <p class="price">Rp. 3.500</p>
                         </div>
@@ -91,7 +97,10 @@
                     <img alt="Product Image 3" src="kategori makanan/wajik.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stras">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                                </p>
                             <h3>Wajik khas Jawa Tengah (per pcs)</h3>
                             <p class="price">Rp. 2.500</p>
                         </div>
@@ -103,7 +112,10 @@
                     <img alt="Product Image 4" src="kategori makanan/lumpia.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★☆☆</p>
+                            <p class="rating">
+                                <span class="stras">★★★★★</span>
+                                <span class="rating-number">(5)</span>
+                                </p>
                             <h3>Lumpia Asli Semarang (per pcs)</h3>
                             <p class="price">Rp. 10.000</p>
                         </div>
@@ -115,7 +127,10 @@
                     <img alt="Product Image 5" src="kategori makanan/wingko.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Wajik khas Jawa Tengah (per pcs)</h3>
                             <p class="price">Rp. 7.000</p>
                         </div>
@@ -127,7 +142,10 @@
                     <img alt="Product Image 6" src="kategori makanan/serabi.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Serabi Solo</h3>
                             <p class="price">Rp. 3.500</p>
                         </div>
@@ -139,7 +157,10 @@
                     <img alt="Product Image 7" src="kategori makanan/Jenang Mubarok, Oleh2 Kudus.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Jenang Kudus Mubarok (per box)</h3>
                             <p class="price">Rp. 20.000</p>
                         </div>
@@ -151,7 +172,10 @@
                     <img alt="Product Image 8" src="kategori makanan/Roti ganjel rel.jpeg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★☆</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Roti Ganjel Rel khas Semarang (per pcs)</h3>
                             <p class="price">Rp. 10.000</p>
                         </div>
@@ -163,7 +187,10 @@
                     <img alt="Product Image 9" src="kategori makanan/latopia tegal.jpg"/>
                     <div class="product-info">
                         <div>
-                            <p class="rating">★★★★★</p>
+                            <p class="rating">
+                                <span class="stars">★★★★☆</span>
+                                <span class="rating-number">(4)</span>
+                            </p>
                             <h3>Latopia Tegal NY. LIAO (per box)</h3>
                             <p class="price">Rp. 20.000</p>
                         </div>
@@ -218,8 +245,5 @@
             </div>
         </div>
     </footer>
-    <script src="dropdownprofile.js"></script>
-    <script src="dropdown.js"></script>
-    <script src="index.js"></script> 
 </body>
 </html>
