--- a/Final_Celerates/pakaian.html
+++ b/Final_Celerates/pakaian.html
@@ -242,5 +242,8 @@
             </div>
         </div>
     </footer>
+    <script src="dropdownprofile.js"></script>
+    <script src="dropdown.js"></script>
+    <script src="index.js"></script> 
 </body>
 </html>
