--- a/Final_Celerates/kerajinan.html
+++ b/Final_Celerates/kerajinan.html
@@ -62,7 +62,7 @@
         <div class="content">
             <div class="product-grid">
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 1" src="kategori kerajinan/KERAJINAN tempurung kelapa.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 2" src="kategori kerajinan/Kerajinan Topeng souvenir.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 3" src="kategori kerajinan/celengan.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 4" src="kategori kerajinan/hiasan rumah.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 5" src="kategori kerajinan/wayang semar.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 6" src="kategori kerajinan/Rotan Gajah Tempat Permen.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 7" src="kategori kerajinan/anting.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 8" src="kategori kerajinan/anyaman eceng gondok.jpeg"/>
                     <div class="product-info">
                         <div>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="new-label">Terbaru</div>
+                    <div class="new-label">TERBARU</div>
                     <img alt="Product Image 9" src="kategori kerajinan/hiasan dinding.jpeg"/>
                     <div class="product-info">
                         <div>
